eindopdracht/style.css
* {
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif; 
    color: #fff;
}

::-webkit-scrollbar {
    display: none;
}



/* Home -> Nav */

#home {
    height: 100vh;
    background-image: url(./img/landing-page.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-blend-mode: multiply;
    background-color: #acacac;
}

#home nav {
    display: flex;
    position: fixed;
    background-color: #131c27;
    height: 10vh;
    width: 100vw;
    z-index: 1;
}

#home .nav-content {
    display: flex;
    width: 90vw;
    align-items: center;
    justify-content: space-between;
}

#home nav h1 {
    font-family: 'Pattaya', sans-serif;
    font-size: 2rem;
    font-weight: 200;
    margin-left: 5vw;
}

#home nav ul {
    display: flex;
    list-style-type: none;
    justify-content: space-between;
    width: 30vw;
}

#home nav ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 1.5rem;
}

/* Home -> Content */

#home .home-content {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#home .home-content h1 {
    font-size: 3.5rem;
    margin-bottom: 8vh;
}

#home .home-content p {
    font-size: 2.2rem;
}

#home .home-content button {
    background-color: #4c6e97;
    color: white;
    border: none;
    font-size: 1.3rem;
    padding: 1vw 3.5vw;
    margin-top: 8vh;
    cursor: pointer;
}

#home .home-content button:hover {
    background-color: #5c91d1;
    transition: 0.2s ease;
    transform: scale(1.03);
}


/* Locations -> Content */

#locations {
    height: 100vh;
    background-image: url(./img/new-york-page.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-blend-mode: multiply;
    background-color: #acacac;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#locations h2 {
    font-size: 3.8rem;
    border-bottom: 0.35rem #fff solid;
    width: fit-content;
    margin-left: 2vw;
    height: 8vh;
}

#locations p {
    margin-left: 2vw;
    margin-top: 5vh;
    font-size: 2.5rem;
}

/* Benefits -> Title */

#benefits {
    height: 100vh;
}

#benefits .title {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    background-color: #131c27;
    height: 25vh;
    width: 100vw;
}

#benefits .title h2 {
    font-size: 3.5rem;
    margin-bottom: 2vh;
}

#benefits .title p {
    font-size: 2.4rem;
}

/* Benefits -> Cards */

#benefits .card-container {
    display: flex;
    justify-content: center;
}

#benefits .card {
    background-color: #fff;
    width: 21vw;
    height: 52.5vh;
    margin: 3vw;
    margin-top: 8vh;
    box-shadow: 2.5px 5px 12px rgb(195, 195, 195);
}

#benefits .card-bar {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #131C27;
    height: 10vh;
    margin-bottom: 4vh;
}

#benefits .card-bar .icon {
    width: 2.8vw;
}

#benefits .card h2 {
    color: black;
    display: flex;
    justify-content: center;
    font-family: 'Poppins', sans-serif;
    font-size: 2rem;
}

#benefits .card p {
    color: black;
    text-align: center;
    font-family: 'Poppins', sans-serif;
    font-size: 1.5rem;
    margin-top: 10vh;
}

/* Contact -> Content */

#contact {
    height: 100vh;
    background-image: url(./img/contact-mountain.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-blend-mode: multiply;
    background-color: #acacac;
    display: flex;
    justify-content: center;
    align-items: center;
}

#contact .form-wrapper {
    display: flex;
    flex-direction: column;
    background-color: #131c27;
    opacity: 90%;
    height: 50vh;
    width: 50vw;
    border-radius: 1.2vw;
}

#contact .form-wrapper h2 {
    display: flex;
    justify-content: center;
    font-size: 3rem;
    margin-top: 5vh;
    margin-bottom: 6vh;
}

#contact .form-wrapper .contact-content {
    display: flex;
    justify-content: center;
    font-size: 1.5rem;
    padding: 2vh;
}

#contact .form-wrapper .contact-content input {
    width: 12.5vw;
    height: 3.5vh;
    font-size: 1.2rem;
    margin-left: 2vw;
    margin-top: -0.4vh;
    padding-left: 0.5vw;
}

#contact .form-wrapper button {
    background-color: #4c6e97;
    border: none;
    width: 100%;
    height: 6vh;
    color: #fff;
    font-size: 1.2rem;
    border-bottom-left-radius: 1vw;
    border-bottom-right-radius: 1vw;
    cursor: pointer;
    position: relative;
    bottom: -15vh;
}

#contact .form-wrapper button:hover {
    background-color: #5c91d1;
    transition: 0.2s ease;
}

/* Footer -> Content */

#footer {
    height: 10vh;
    background-color: #131c27;
    display: flex;
    align-items: center;
}

#footer h1 {
    font-size: 2rem;
    margin-left: 5vw;
}

#footer ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 40vw;
    list-style-type: none;
    margin-left: 40vw;
}

#footer ul li {
    list-style: none;
}



/* Responsive */

@media screen and (max-width: 600px) {
    
    /* Home Responsive */

    #home nav {
        height: 18vh;
        z-index: 1;
    }

    #home .nav-content {
        flex-direction: column;
        justify-content: center;
        width: 100vw;
    }

    #home nav ul {
        width: 70vw;
        margin-top: 2vh;
    }

    #home .home-content h1 {
        font-size: 2.5rem;
        margin-top: 20vh;
    }

    #home .home-content p {
        font-size: 1.5rem;
        width: 55%;
        margin-top: -3vh;
    }

    #home .home-content button {
        margin-top: 5vh;
        padding: 2.2vw 6vw;
        font-size: 1.1rem;
    }

    /* Locations Responsive */

    #locations h2 {
        font-size: 2.5rem;
        margin-left: 4vw;
    }

    #locations p {
        margin-left: 4vw;
        margin-top: 2vh;
        font-size: 1.5rem;
        width: 70%;
    }

    /* Benefits Responsive */

    #benefits {
        height: 200vh;
    }
    
    #benefits .title {
        height: 30vh; 
    }

    #benefits .title h2 {
        font-size: 2.6rem;
        margin-bottom: 2vh;
    }
    
    #benefits .title p {
        font-size: 1.5rem;
        width: 55%;
    }

    #benefits .card-container {
        flex-direction: column;
        align-items: center;
    }

    #benefits .card {
        width: 60vw;
        height: 52.5vh;
        margin-top: 2vh;
        box-shadow: 2.5px 5px 12px rgb(195, 195, 195);
    }
    
    #benefits .card-bar .icon {
        width: 7.8vw;
    }

    /* Contact Responsive */

    #contact .form-wrapper {
        height: 45vh;
        width: 85vw;
        border-radius: 4vw;
    }
    
    #contact .form-wrapper h2 {
        font-size: 2.8rem;
    }

    #contact .form-wrapper .contact-content input {
        width: 30vw;
        height: 4vh;
        font-size: 1.2rem;
        margin-left: 4vw;
    }

    #contact .form-wrapper button {
        height: 8vh;
        border-bottom-left-radius: 4vw;
        border-bottom-right-radius: 4vw;
        bottom: -10vh;
    }

    /* Footer Responsive */

    #footer {
        height: 15vh;
        flex-direction: column;
        align-items: center;
    }

    #footer h1 {
        font-size: 1.8rem;
        margin-top: 2vh;
    }

    #footer ul {
        display: flex;
        width: 70vw;
        margin-left: 0vw;
        margin-top: 2.5vh;
    }
}

